Finished file writing
Very crude solution, leaves rooms for hacker exploits

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 
     </head>
     <body>
-        <!--
         <div id="holdtimer">
             <span id="runner"></span>
-            <span id="errorwait"></span>
-        </div>-->
+        </div>
         <div id="launcher" class="mainstyle"> <!-- Holds the start screen -->
             Participant Number: <input id="usernum" class = "launch">
             <p class="breakline"></p>
@@ -384,6 +382,7 @@
         <br><br>
         
         <div id="end" align="center" style="font-family:Arial;font-size:36px;"></div>
+        <div id="dataoutput"></div>
     </body>
 
 </html>
